# solarcost-web

./: .env.local  README.md  init.sh  pyproject.toml  uninstall.sh
.claude/: launch.json
.github/workflows/: ci.yml  publish.yml
src/sa_costs_web/: __init__.py  __main__.py  app.py  calculator.py  config.py  db.py  i18n.py  install.py  sections.py  uninstall.py
src/sa_costs_web/static/: app.css  app.js  manifest.webmanifest  sw.js
src/sa_costs_web/templates/: account.html  base.html  dashboard.html  login.html  period_detail.html  periods.html  settings.html  setup.html
tests/: test_costs_web.py
